--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.5.0",
+    "http-proxy-middleware": "^2.0.6",
     "node-fetch": "^3.3.1"
   }
 }
